--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <title>Webpack App</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <h2>Tip: Check your console</h2>
-        <h3> start with typescript</h3>
+        <canvas id="canvas" width="490" height="490"
+        style="border: 1px solid black;">
+        </canvas>
+        <p id="clear">clear</p>
     </body>
     
     <script>
