--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <canvas id="canvas" width="1020" height="500"></canvas>
+        "hello"
     </body>
     
     <script>
