--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Webpack App</title>
-    </head>
+    <script defer src="./dist/main.js"></script></head>
     <body>
         <canvas id="canvas" width="1020" height="500"></canvas>
         "hello"
